add servicio delete user con documentacion
